# mycodex

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: host_controller.rs  lib.rs  main.rs
apps/desktop/src/components/: Composer.tsx  HostView.tsx  ModePicker.tsx  RepoSelector.tsx  SettingsView.tsx  ThreadSelector.tsx  WorkbenchView.tsx
apps/desktop/src/lib/: gateway.ts  host.ts
apps/desktop/src/store/: session.ts
apps/desktop/src/types/: gateway.ts
apps/server/: Cargo.toml
apps/server/src/: app.rs  app_auth.rs  app_cli.rs  app_gateway.rs  cli.rs  commands.rs  config.rs  lib.rs  onboard.rs  pairing.rs  repo.rs  state.rs
apps/server/src/codex/: protocol.rs
apps/server/src/telegram/: api.rs  render.rs
config/: config.example.toml
deploy/systemd/: mycodex.service
docs/: server-token-management-v1.md
public/: install.sh
scripts/: install.sh  package-release.sh
src/: app.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  onboard.rs  platform.rs  repo.rs  state.rs
src/codex/: protocol.rs  runtime.rs
src/telegram/: api.rs  render.rs
