[package]
name = "mycodex"
version = "0.1.11"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
