[package]
name = "mycodex"
version = "0.1.13"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.1", features = ["http1", "json", "tokio", "ws"] }
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
