[package]
name = "mycodex-desktop-shell"
version = "0.1.14"
edition = "2021"
description = "Tauri shell for the MyCodex desktop APP surface"
license = "MIT"
repository = "https://github.com/LeoGray/mycodex"
homepage = "https://github.com/LeoGray/mycodex"

[lib]
name = "mycodex_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
toml = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
mycodex = { path = "../../server" }
